--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     font-weight: 550;
     display: block;
     padding: 5px 10px;
-    color: black;
+    color: crimson;
     text-decoration: none;
     margin-left: 20px;
     margin-right: 20px;
