--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: Verdana, Tahoma, sans-serif;
   }
   
   .container {
@@ -23,12 +22,12 @@
   .nav a {
     list-style: none;
     border-radius: 15px;
-    font: verdana;
+    
     font-size: 1rem;
     font-weight: 550;
     display: block;
     padding: 5px 10px;
-    color: crimson;
+    color:black;
     text-decoration: none;
     margin-left: 20px;
     margin-right: 20px;
@@ -37,7 +36,7 @@
   }
   .nav a:hover{
     
-    background-color: #b1b0b0;
+    background-color: #808080;
   }
   
   .content {
